--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <a href="http://www.baidu.com">测试</a>
 <figure></figure>
-<img class="img-thumbnail" alt="140x140" src="http://placehold.it/140x140">
+<!--<img class="img-thumbnail" alt="140x140" src="http://placehold.it/140x140">-->
 <div class="glyphicon glyphicon-search">测试</div>
 <hr>
 <div role="button">测试按钮button</div>
@@ -17,29 +17,38 @@
   excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any
   one will load the style sheet into this very page. The code remains the same, the only thing that has changed is the
   external .css file. </p>
-<dl class="dl-horizontal">
-  <dt>W3cplus</dt>
-  <dd>一个致力于推广国内前端行业的技术博客。它以探索为己任，不断活跃在行业技术最前沿，努力提供高质量前端技术博文</dd>
-  <dt>慕课网</dt>
-  <dd>一个专业的，真心实意在做培训的网站</dd>
-  <dt>我来测试一个标题，我来测试一个标题</dt>
-  <dd>我在写一个水平定义列表的效果，我在写一个水平定义列表的效果</dd>
-</dl>
 <!--下面是代码任务部分-->
 <dl class="dl-horizontal">
-
   <dt>标题一：</dt>
-
   <dd>描述内容</dd>
-
   <dt>标题二：</dt>
-
   <dd>描述内容</dd>
-
 </dl>
 <blockquote>
   <p>ces</p>
   <p>ces2</p>
 </blockquote>
+<input type="range"/>
+<input type="file"/>
+<form role="form">
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" value="">
+      记住密码
+    </label>
+  </div>
+  <div class="radio">
+    <label>
+      <input type="radio" name="optionsRadios" id="optionsRadios1" value="love" checked>
+      喜欢
+    </label>
+  </div>
+  <div class="radio">
+    <label>
+      <input type="radio" name="optionsRadios" id="optionsRadios2" value="hate">
+      不喜欢
+    </label>
+  </div>
+</form>
 </body>
 </html>
