--- a/index.html
+++ b/index.html
@@ -4,51 +4,24 @@
   <meta charset="UTF-8">
   <title>bootstrap测试</title>
   <link rel="stylesheet" href="./dist/css/bootstrap.css">
+  <script type="text/javascript" src="./dist/js/jquery.min.js"></script>
+  <script type="text/javascript" src="./dist/js/bootstrap.js"></script>
 </head>
 <body>
-<a href="http://www.baidu.com">测试</a>
-<figure></figure>
-<!--<img class="img-thumbnail" alt="140x140" src="http://placehold.it/140x140">-->
-<div class="glyphicon glyphicon-search">测试</div>
-<hr>
-<div role="button">测试按钮button</div>
-<em>测试斜体</em>
-<p class="text-justify">There is clearly a need for CSS to be taken seriously by graphic artists. The Zen Garden aims to
-  excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any
-  one will load the style sheet into this very page. The code remains the same, the only thing that has changed is the
-  external .css file. </p>
-<!--下面是代码任务部分-->
-<dl class="dl-horizontal">
-  <dt>标题一：</dt>
-  <dd>描述内容</dd>
-  <dt>标题二：</dt>
-  <dd>描述内容</dd>
-</dl>
-<blockquote>
-  <p>ces</p>
-  <p>ces2</p>
-</blockquote>
-<input type="range"/>
-<input type="file"/>
-<form role="form">
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" value="">
-      记住密码
-    </label>
+<div class="btn-group">
+  <button class="btn btn-default" type="button">首页</button>
+  <button class="btn btn-default" type="button">产品展示</button>
+  <button class="btn btn-default" type="button">案例分析</button>
+  <button class="btn btn-default" type="button">联系我们</button>
+  <div class="btn-group dropdown dropup">
+    <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button">关于我们<span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="##">公司简介</a></li>
+      <li><a href="##">企业文化</a></li>
+      <li><a href="##">组织结构</a></li>
+      <li><a href="##">客服服务</a></li>
+    </ul>
   </div>
-  <div class="radio">
-    <label>
-      <input type="radio" name="optionsRadios" id="optionsRadios1" value="love" checked>
-      喜欢
-    </label>
-  </div>
-  <div class="radio">
-    <label>
-      <input type="radio" name="optionsRadios" id="optionsRadios2" value="hate">
-      不喜欢
-    </label>
-  </div>
-</form>
+</div>
 </body>
 </html>
