--- a/index.html
+++ b/index.html
@@ -8,19 +8,31 @@
   <script type="text/javascript" src="./dist/js/bootstrap.js"></script>
 </head>
 <body>
-<div class="btn-group">
-  <button class="btn btn-default" type="button">首页</button>
-  <button class="btn btn-default" type="button">产品展示</button>
-  <button class="btn btn-default" type="button">案例分析</button>
-  <button class="btn btn-default" type="button">联系我们</button>
-  <div class="btn-group dropdown dropup">
-    <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button">关于我们<span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li><a href="##">公司简介</a></li>
-      <li><a href="##">企业文化</a></li>
-      <li><a href="##">组织结构</a></li>
-      <li><a href="##">客服服务</a></li>
-    </ul>
+<div class="media">
+  <a class="pull-left" href="#">
+    <img class="media-object" src="http://a.disquscdn.com/uploads/users/3740/2069/avatar92.jpg?1406972031" alt="...">
+  </a>
+  <div class="media-body">
+    <h4 class="media-heading">我是大漠</h4>
+    <div>我是W3cplus站长大漠，我在写Bootstrap框中的媒体对象测试用例</div>
+    <div class="media">
+      <a class="pull-left" href="#">
+        <img class="media-object" src="http://tp2.sinaimg.cn/3306361973/50/22875318196/0" alt="...">
+      </a>
+      <div class="media-body">
+        <h4 class="media-heading">慕课网</h4>
+        <div>大漠写的《玩转Bootstrap》系列教程即将会在慕课网上发布</div>
+        <div class="media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="http://tp4.sinaimg.cn/1167075935/50/22838101204/1" alt="...">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">W3cplus</h4>
+            <div>W3cplus站上还有很多教程....</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </body>
