--- a/index.html
+++ b/index.html
@@ -9,69 +9,39 @@
   <script type="text/javascript" src="./dist/js/bootstrap.js"></script>
 </head>
 <body>
-<h3>按钮做的提示框</h3>
-<button type="button"
-        class="btn btn-default"
-        data-toggle="tooltip"
-        data-placement="top"
-        data-original-title="提示框在顶部">提示框在顶部
-</button>
-<button type="button"
-        class="btn btn-default"
-        data-toggle="tooltip"
-        data-placement="left"
-        data-original-title="提示框居左"
-        title="">提示框居左
-</button>
-<button type="button"
-        class="btn btn-default"
-        data-toggle="tooltip"
-        data-placement="bottom"
-        data-original-title="提示框在底部">提示框在底部
-</button>
-<button type="button"
-        class="btn btn-default"
-        data-toggle="tooltip"
-        data-placement="right"
-        data-original-title="提示框居右">提示框居右
-</button>
-<h3>链接制作的提示框</h3>
-<a class="btn btn-primary"
-   data-toggle="tooltip"
-   data-placement="top"
-   data-original-title="提示框在顶部2333"
-   title="提示框在顶部">提示框在顶部</a>
-<a class="btn btn-primary"
-   data-toggle="tooltip"
-   data-placement="left"
-   title="提示框居左">提示框居左</a>
-<a class="btn btn-primary"
-   data-toggle="tooltip"
-   data-placement="bottom"
-   title="提示框在底部">提示框在底部</a>
-<a class="btn btn-primary"
-   data-toggle="tooltip"
-   data-placement="right"
-   title="提示框在居右">提示框居右</a>
-<a href="##"
-   class="btn btn-primary"
-   id="myTooltip">我是提示框</a>
-<a href="##"
-   class="btn btn-primary"
-   id="myTooltip2">我是提示框2</a>
-<script>
-  $(function () {
-    $(document).tooltip({
-      delay: 500,
-      trigger: 'hover click',
-      selector: '[data-toggle="tooltip"]'
-    });
-    $('#myTooltip').tooltip({
-      title: "我是一个提示框，我在顶部出现",
-      placement: 'top'
-    });
-  });
-</script>
-
+<ul id="myTab" class="nav nav-tabs">
+  <li class="active">
+    <a href="#home" data-toggle="tab">
+      菜鸟教程
+    </a>
+  </li>
+  <li><a href="#ios" data-toggle="tab">iOS</a></li>
+  <li class="dropdown">
+    <a href="#" id="myTabDrop1" class="dropdown-toggle"
+       data-toggle="dropdown">Java
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
+      <li><a href="#jmeter" tabindex="-1" data-toggle="tab">jmeter</a></li>
+      <li><a href="#ejb" tabindex="-1" data-toggle="tab">ejb</a></li>
+    </ul>
+  </li>
+</ul>
+<div id="myTabContent" class="tab-content">
+  <div class="tab-pane fade in active" id="home">
+    <p>菜鸟教程是一个提供最新的web技术站点，本站免费提供了建站相关的技术文档，帮助广大web技术爱好者快速入门并建立自己的网站。菜鸟先飞早入行——学的不仅是技术，更是梦想。</p>
+  </div>
+  <div class="tab-pane fade" id="ios">
+    <p>iOS 是一个由苹果公司开发和发布的手机操作系统。最初是于 2007 年首次发布 iPhone、iPod Touch 和 Apple
+      TV。iOS 派生自 OS X，它们共享 Darwin 基础。OS X 操作系统是用在苹果电脑上，iOS 是苹果的移动版本。</p>
+  </div>
+  <div class="tab-pane fade" id="jmeter">
+    <p>jMeter 是一款开源的测试软件。它是 100% 纯 Java 应用程序，用于负载和性能测试。</p>
+  </div>
+  <div class="tab-pane fade" id="ejb">
+    <p>Enterprise Java Beans（EJB）是一个创建高度可扩展性和强大企业级应用程序的开发架构，部署在兼容应用程序服务器（比如 JBOSS、Web Logic 等）的 J2EE 上。
+    </p>
+  </div>
+</div>
 </body>
 </html>
